# loadiff

./: .gitignore  README.md  pyproject.toml
configs/: diffusion_ts.yaml  diffusion_ts_heater.yaml  inference_baseline.yaml  inference_loadiff.yaml  inference_loadiff_dataset_conditioned.yaml  inference_loadiff_unconditional.yaml  inference_loadiff_user_conditioned.yaml  loadiff_no_conditioning.yaml  loadiff_with_conditioning.yaml  simple_unet.yaml  timegan.yaml  timegan_heater.yaml  timevae.yaml  timevae_heater.yaml
configs/dataset/: cer.yaml
configs/postprocessing/: calibrate_plausibility.yaml  postprocess_generated_curves.yaml
data/cer/: train_valid_test_id_split.pkl
runs_postprocessing/calibrate_cer_train/: plausibility_envelope.json  resolved_config.yaml
scripts/bash/: submit_inference_baseline.sh  submit_inference_loadiff.sh  submit_training_cond_all_baselines.sh  submit_training_diffusion_ts.sh  submit_training_loadiff.sh  submit_training_loadiff_all.sh  submit_training_no_conditioning.sh  submit_training_timegan.sh  submit_training_timevae.sh  submit_training_with_conditioning.sh
scripts/inference/: baseline_conditioning.py  baselines_common.py  inference_baseline.py  inference_diffusion_ts.py  inference_loadiff.py  inference_simple_unet.py  inference_timegan.py  inference_timevae.py
scripts/postprocessing/: calibrate_plausibility_envelopes.py  calibrate_plausibility_envelopes.sh  postprocess_generated_curves.py  submit_postprocessing.sh
scripts/training/: ablation_common.py  train_all_appliances.py  train_diffusion_ts.py  train_loadiff.py  (+3 more)
(+81 files in other folders)
