[project]
name = "2026-generation-cdc"
version = "0.1.0"
description = "Conditional load curve time series generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "diffusers>=0.34.0",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "hydra-core>=1.3.2",
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "ml-collections>=1.1.0",
    "numpy>=2.1.3",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "plotly>=6.0.1",
    "polars>=1.16.0",
    "privacyeval",
    "pyarrow>=19.0.1",
    "pytorch-lightning>=2.4.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "simple-parsing>=0.1.6",
    "sktime>=0.38.4",
    "statsmodels>=0.14.5",
    "tensorboard>=2.18.0",
    "timm>=1.0.19",
    "torch>=2.5.1",
    "torch-summary>=1.4.5",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.1",
]

[tool.uv.sources]
privacyeval = { git = "https://gitlab.pleiade.edf.fr/E7H/privacyeval.git", rev = "v0.1.2" }

